@@ -171,6 +171,7 @@ struct SCIP_Digraph
 {
    int**                 successors;         /**< adjacency list: for each node (first dimension) list of all successors */
    void***               arcdatas;           /**< arc datas corresponding to the arcs to successors given by the successors array  */
+   void**                nodedatas;          /**< arc datas corresponding to the arcs to successors given by the successors array  */
    int*                  successorssize;     /**< sizes of the successor lists for the nodes */
    int*                  nsuccessors;        /**< number of successors stored in the adjacency lists of the nodes */
    int*                  components;         /**< array to store the node indices of the components, one component after the other */
